--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </form>
   </div>
 </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js" integrity="sha512-F+u8eWHrfY8Xw9BLzZ8rG/0wIvs0y+JyRJrXjp3VjtFPylAEEGwKbua5Ip/oiVhaTDaDs4eU2Xtsxjs/9ag2bQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-firestore.js"></script>
 <script>
@@ -70,8 +70,11 @@
   const db = firebase.firestore();
 
 </script>
-    <script src="/scripts/app.js"></script>
-    <script src="/scripts/chat.js"></script>
+    <script src="/scripts/chat.js"></script>  
     <script src="/scripts/ui.js"></script>
+    <script src="/scripts/app.js"></script>
+    
+    <!-- element undefined error ->  스크립트 순서를 잘 정렬할 것 !!!  -->
+  
     </body>
 </html>
